Removing blank lines from output. Allowing the header to appear any place in the file

--- a/tFileInputCSVFilter/tFileInputCSVFilter_messages.properties
+++ b/tFileInputCSVFilter/tFileInputCSVFilter_messages.properties
@@ -10,3 +10,9 @@ INPUT_FILE.NAME=INPUT_FILE
 DELIMITER.NAME=DELIMITER
 LOOKUP_COLUMN.NAME=LOOKUP_COLUMN
 LOOKUP_VALUE.NAME=LOOKUP_VALUE
+HEADER_ROW_NUMBER.NAME=HEADER_ROW_NUMBER
+
+FILTER.MENU=Filter
+REJECT.MENU=Reject
+FILTER.LINK=Filter
+REJECT.LINK=Reject
